@@ -11,6 +11,7 @@ Improvements:
    shared_libraries (determine which libraries a binary links with)
    links_with_shared_library (test if a binary links with a particular library)
  - New CrashDatabase API: get_affected_packages(), can_update(), is_reporter()
+ - Rename CrashDatabase.update() to update_traces().
 
 1.9.6 (2009-12-01)
 ------------------
